# tg-uz-reminder

./: .env  .env.example  .gitignore  Cargo.toml  README.md
database/: Cargo.toml
database/src/: lib.rs
pdf_parser/: Cargo.toml
pdf_parser/src/: errors.rs  lib.rs
src/: consts.rs  main.rs  mydb.rs  tg.rs
telegram/: Cargo.toml
telegram/src/: consts.rs  errors.rs  lib.rs
ukrzaliznytsia_parser/: Cargo.toml
ukrzaliznytsia_parser/src/: consts.rs  delayed_trains.rs  errors.rs  lib.rs
