[package]
name = "tg_uz_reminder"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["database", "pdf_parser", "telegram", "ukrzaliznytsia_parser"]

[workspace.dependencies]
chrono = { version = "0" }
chrono-tz = { version = "0" }
thiserror = "1"
tracing = "0"
reqwest = "0"

[dependencies]
tokio = { version = "1", features = ["full"] }
tracing = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
chrono-tz = { workspace = true }

ukrzaliznytsia_parser = { path = "ukrzaliznytsia_parser" }
telegram = { path = "telegram" }
pdf_parser = { path = "pdf_parser" }
dotenvy = "0"
database = { path = "database" }
rclite = "0"
dashmap = "5"
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "parking_lot",
] }
tracing-appender = "0"
