[package]
name = "ukrzaliznytsia_parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = { workspace = true }
# derive_more = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true }
html_parser = "0"
